openapi: use ResponseMessages for all replies
We are skipping the logs reply as that one needs special behavior
(being a stream response).

Had to split the quota to handle better the object with models.
