# gen/models.go
@@ -1,6 +1,6 @@
 // Package gen provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.16.1 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
 package gen
 
 const (
@@ -45,11 +45,6 @@ type BuildCondition struct {
 	Status  *BuildStatus `json:"status,omitempty"`
 }
 
-// BuildId defines model for BuildId.
-type BuildId struct {
-	Id *string `json:"id,omitempty"`
-}
-
 // BuildLog defines model for BuildLog.
 type BuildLog struct {
 	Line *string `json:"line,omitempty"`
@@ -83,10 +78,21 @@ type Conflict struct {
 	Message *string `json:"message,omitempty"`
 }
 
+// DeleteResponse defines model for DeleteResponse.
+type DeleteResponse struct {
+	Id *string `json:"id,omitempty"`
+
+	// Messages Lists of messages by priority, note that there will be a warning here when the endpoint is being deprecated
+	// with information on how to proceed to update it.
+	Messages *ResponseMessages `json:"messages,omitempty"`
+}
+
 // HealthResponse defines model for HealthResponse.
 type HealthResponse struct {
-	Message *string               `json:"message,omitempty"`
-	Status  *HealthResponseStatus `json:"status,omitempty"`
+	// Messages Lists of messages by priority, note that there will be a warning here when the endpoint is being deprecated
+	// with information on how to proceed to update it.
+	Messages *ResponseMessages     `json:"messages,omitempty"`
+	Status   *HealthResponseStatus `json:"status,omitempty"`
 }
 
 // HealthResponseStatus defines model for HealthResponse.Status.
@@ -95,6 +101,24 @@ type HealthResponseStatus string
 // InternalError defines model for InternalError.
 type InternalError struct {
 	Message *string `json:"message,omitempty"`
+}
+
+// LatestResponse defines model for LatestResponse.
+type LatestResponse struct {
+	Build *Build `json:"build,omitempty"`
+
+	// Messages Lists of messages by priority, note that there will be a warning here when the endpoint is being deprecated
+	// with information on how to proceed to update it.
+	Messages *ResponseMessages `json:"messages,omitempty"`
+}
+
+// ListResponse defines model for ListResponse.
+type ListResponse struct {
+	Builds *[]Build `json:"builds,omitempty"`
+
+	// Messages Lists of messages by priority, note that there will be a warning here when the endpoint is being deprecated
+	// with information on how to proceed to update it.
+	Messages *ResponseMessages `json:"messages,omitempty"`
 }
 
 // NewBuild defines model for NewBuild.
@@ -122,7 +146,16 @@ type Quota struct {
 	} `json:"categories,omitempty"`
 }
 
-// ResponseMessages defines model for ResponseMessages.
+// QuotaResponse defines model for QuotaResponse.
+type QuotaResponse struct {
+	// Messages Lists of messages by priority, note that there will be a warning here when the endpoint is being deprecated
+	// with information on how to proceed to update it.
+	Messages *ResponseMessages `json:"messages,omitempty"`
+	Quota    *Quota            `json:"quota,omitempty"`
+}
+
+// ResponseMessages Lists of messages by priority, note that there will be a warning here when the endpoint is being deprecated
+// with information on how to proceed to update it.
 type ResponseMessages struct {
 	Error   *[]string `json:"error,omitempty"`
 	Info    *[]string `json:"info,omitempty"`
@@ -131,6 +164,8 @@ type ResponseMessages struct {
 
 // StartResponse defines model for StartResponse.
 type StartResponse struct {
+	// Messages Lists of messages by priority, note that there will be a warning here when the endpoint is being deprecated
+	// with information on how to proceed to update it.
 	Messages *ResponseMessages `json:"messages,omitempty"`
 	NewBuild *NewBuild         `json:"new_build,omitempty"`
 }
